[gd_scene load_steps=6 format=3 uid="uid://cedg7j0dgq0wk"]

[ext_resource type="Script" path="res://Blackjack/blackjack.gd" id="1_ioltr"]
[ext_resource type="PackedScene" uid="uid://cparxsups2vcv" path="res://Deck/deck.tscn" id="1_j0pps"]
[ext_resource type="PackedScene" uid="uid://bmn5dfyh2w3ev" path="res://BettingWindow/betting_window.tscn" id="2_1nybl"]
[ext_resource type="PackedScene" uid="uid://otnpys3ofrpk" path="res://Main menu/main_menu_button.tscn" id="3_njf0m"]
[ext_resource type="PackedScene" uid="uid://b1822e1hx306p" path="res://Main menu/chips_label.tscn" id="4_ajmje"]

[node name="Blackjack" type="Node2D"]
script = ExtResource("1_ioltr")

[node name="Deck" parent="." instance=ExtResource("1_j0pps")]
position = Vector2(578, 320)

[node name="DealerRule" type="Label" parent="."]
offset_left = 470.0
offset_top = 163.0
offset_right = 683.0
offset_bottom = 186.0
text = "Dealer stands starting at 17"

[node name="PlayerScore" type="Label" parent="."]
offset_left = 816.0
offset_top = 312.0
offset_right = 932.0
offset_bottom = 335.0
text = "Player score : 0"

[node name="DealerScore" type="Label" parent="."]
offset_left = 816.0
offset_top = 288.0
offset_right = 935.0
offset_bottom = 311.0
text = "Dealer score : 0"

[node name="PlayerHand" type="Node2D" parent="."]
position = Vector2(104, 528)

[node name="PlayerSplitHand" type="Node2D" parent="."]
position = Vector2(632, 528)

[node name="DealerHand" type="Node2D" parent="."]
position = Vector2(104, 104)

[node name="MainMenuButton" parent="." instance=ExtResource("3_njf0m")]

[node name="Chips Label" parent="." instance=ExtResource("4_ajmje")]
offset_left = 1092.0
offset_right = 1144.0

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
offset_left = 656.0
offset_top = 219.0
offset_right = 767.0
offset_bottom = 425.0

[node name="StartGame" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Start game"

[node name="DrawPlayer" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Draw player"

[node name="DrawDealer" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Draw dealer"

[node name="DealerTurn" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Dealer's turn"

[node name="DoubleDown" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Double down"

[node name="SplitCards" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Split"

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 383.0
offset_top = 231.0
offset_right = 787.0
offset_bottom = 434.0
size_flags_horizontal = 4

[node name="BettingWindow" parent="Control" instance=ExtResource("2_1nybl")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[connection signal="pressed" from="ButtonsContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="ButtonsContainer/DrawPlayer" to="." method="_on_draw_player_pressed"]
[connection signal="pressed" from="ButtonsContainer/DrawDealer" to="." method="_on_draw_dealer_pressed"]
[connection signal="pressed" from="ButtonsContainer/DealerTurn" to="." method="_on_dealer_turn_pressed"]
[connection signal="pressed" from="ButtonsContainer/DoubleDown" to="." method="_on_double_down_pressed"]
[connection signal="pressed" from="ButtonsContainer/SplitCards" to="." method="_on_split_cards_pressed"]
